--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="App/js/jquery.js" charset="utf-8"></script>
   </head>
   <body>
-    <script type="text/javascript" src="App/cantiqueService.js"></script>
+    <script type="text/javascript" src='App/js/cantiqueService.js'></script>
     <script type="text/javascript" src='/static/bundle.js'></script>
   </body>
 </html>
